<resources>
    <string name="app_name">HelloWorldProgram</string>
    <string name="example" translatable="false">1000-7= ?</string>
    <string name="answer_text">ANSWER</string>
    <string name="incorrect_answer">Sorry, the answer is incorrect!</string>
    <string name="correct_answer">You are right!</string>
    <string name="input_answer">Input answer:</string>
    <string name="secret_answer" translatable="false">Фу аниме для пидоров</string>

</resources>